--- a/tee-teeshine.html
+++ b/tee-teeshine.html
@@ -1,9 +1,9 @@
  <!DOCTYPE html>
 
 <head>
-<head>
+<meta name="viewport" content="width=device-width" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>
+
 <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=shadows+Into+light' rel='stylesheet' type='text/css'>
 <script src="/assets/jquery.js"></script>
