--- a/teeteeshine.html
+++ b/teeteeshine.html
@@ -449,7 +449,7 @@
       <p>Contact us and we'll get back to you within 24 hours.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span> Queens, Ny</p>
       <p><span class="glyphicon glyphicon-phone"></span> 5169728143</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> harrisonabbygale@gmail.com.com</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> harrisonabbygale@gmail.com</p>
     </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
